client/src/components/About.css
#aboutTop, #aboutBottom {
    width: 100%;
    text-align: center;
    color: #ffffff;
    font-size: 1.5em;
    position: relative;
}

.aboutImage {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.aboutDescriptionBackground {
    background-color: rgba(250, 201, 1, 0.55);
    z-index: 1;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
}

.aboutDescription, #aboutTopName {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
}

